package network;

enum message_type{
    HN_REGISTER = 0;
    HN_AUTH = 1;
    HN_GET_ALL_GUESTS = 2;
    HN_REGISTER_EMPLOYEE = 3;
    HN_GET_ALL_EMPLOYEES = 4;
    HN_GET_ALL_HOTELS = 5;
    HN_GET_ALL_ROOMS = 6;
    HN_GET_HOTEL_EMPLOYEES = 7;
    HN_EDIT_EMPLOYEE = 8;
    HN_DELETE_EMPLOYEE = 9;
    HN_GET_HOTEL_ROOMS = 10;
    HN_DELETE_ROOM = 11;
    HN_GET_ROOM_TYPES = 12;
    HN_ADD_HOTEL_ROOM = 13;
    HN_EDIT_HOTEL_ROOM = 14;
    HN_GET_HOTEL_ORDERS = 15;
    HN_GET_HOTEL_TYPES = 16;
    HN_GET_VACANT_ROOMS = 17;
    HN_MAKE_ORDER = 18;
    HN_GET_CURRENT_GUESTS = 19;
    HN_COUNT_HOTEL_ROOMS = 20;
    HN_COUNT_HOTEL_EMPLOYEES = 21;
    HN_COUNT_HOTEL_ORDERS = 22;
    HN_AVG_RESIDENCE_TIME = 23;
    HN_AVG_ROOM_RATING = 24;
    HN_GET_VACANT_ROOMS_GUEST = 25;
}
